--- a/pages/chooseSN/chooseSN.wxss
+++ b/pages/chooseSN/chooseSN.wxss
@@ -61,36 +61,57 @@
 /*全选checkbox*/
 .bottom_1 {
   background-color: #FFFFFF;
-  position: fixed;
+  /* position: fixed;
   bottom: 55rpx;
-  left: 40rpx;
+  left: 40rpx; */
 }
 /*全选文字*/
 .bottom_view_1 {
-  position: fixed;
+  /* position: fixed;
   bottom: 59rpx;
-  left: 100rpx;
+  left: 100rpx; */
+  padding-left: 20rpx;
 }
 /*添加仪器按钮*/
 .button-bottom_1 {
-  background-color: #FFFFFF;
+  /*background-color: #FFFFFF;
   color: #1673EC;
   position: fixed;
   bottom: 40rpx;
-  left: 215rpx;
+  left: 215rpx; 
   width: 35% !important;
-  border: 1rpx solid #1673EC;
+  border: 1rpx solid #1673EC;*/
+  background-color: #FFFFFF;
+    color: #1673EC;
+    width: 220rpx !important;
+    border: 1rpx solid #1673EC;
+    padding: 0rpx;
+    height: 80rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20rpx !important;
 }
 
 /*完成按钮*/
 .button-bottom_2 {
-  background-color: #1673EC;
+  /* background-color: #1673EC;
   color: #FFFFFF;
   position: fixed;
   bottom: 40rpx;
   left: 510rpx;
   width: 30% !important;
-  border: 1rpx solid #1673EC;
+  border: 1rpx solid #1673EC; */
+  background-color: #FFFFFF;
+    color: #1673EC;
+    width: 220rpx !important;
+    border: 1rpx solid #1673EC;
+    padding: 0rpx;
+    height: 80rpx;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 20rpx !important;
 }
 
 .search_close {
@@ -124,4 +145,18 @@ checkbox选中后对勾样式
   text-align: center;
   font-size: 35rpx;
   margin-top: 50rpx;
+}
+
+.choose_view{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #FFFFFF;
+  position: fixed;
+  bottom: 0rpx;
+  left: 0rpx;
+  z-index: 99;
+  height: 120rpx;
+  width: 100%;
+  padding: 0rpx 40rpx;
 }
