--- a/pages/tagsLog/index.wxml
+++ b/pages/tagsLog/index.wxml
@@ -25,6 +25,7 @@
                   <view wx:if="{{item.instrument_SN_old && (item.instrument_SN != item.instrument_SN_old)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">被替换仪器：{{item.instrument_SN_old}}</view>
                   <view wx:if="{{item.company_name && (tools.subStringName(item.alter_type) == 3)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">客户名称：{{item.company_name}}</view>
                   <view wx:if="{{item.company_name_old && (tools.subStringName(item.alter_type) == 3)}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">原客户名称：{{item.company_name_old}}</view>
+                  <view wx:if="{{item.remark}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">备注：{{item.remark}}</view>
                   <view wx:if="{{item.alter_person_name}}" class='title_gray' style="font-size: 28rpx;margin-top:20rpx;">{{tools.subStringName(item.alter_type) == 0 ? '创建人员：':'修改人员：'}}{{item.alter_person_name}}</view>
                   <view style="height: 40rpx;"></view>
                 </view>
