--- a/pages/gpsManageInstrument/index.wxml
+++ b/pages/gpsManageInstrument/index.wxml
@@ -23,8 +23,8 @@
           <view class='text-content_title'>{{item.instrument_SN}}</view>
           <view class='text-content_lable' wx:if="{{item.position_SN}}">GPS：{{item.position_SN}}</view>
         </view>
-        <image wx:if="{{item.position_SN}}" data-instrumentsn='{{item.instrument_SN}}' bindtap="UniteCheckGPS" src="../../image/icon_untie.png" class='text_img' />
-        <image wx:else data-instrumentsn='{{item.instrument_SN}}' bindtap="bindCheckGPS" src="../../image/icon_binding.png" class='text_img' />
+        <image wx:if="{{item.position_SN}}" data-instrumentsn='{{item.instrument_SN}}' data-instrumentname='{{item.instrument_name}}' bindtap="UniteCheckGPS" src="../../image/icon_untie.png" class='text_img' />
+        <image wx:else data-instrumentsn='{{item.instrument_SN}}' data-instrumentname='{{item.instrument_name}}' bindtap="bindCheckGPS" src="../../image/icon_binding.png" class='text_img' />
       </view> 
     </block>
 
@@ -42,8 +42,8 @@
           <view class='text-content_title'>{{item.instrument_SN}}</view>
           <view class='text-content_lable'>{{item.position_SN}}</view>
         </view>
-        <image wx:if="{{item.position_SN}}" data-instrumentsn='{{item.instrument_SN}}' bindtap="UniteCheckGPS" src="../../image/icon_untie.png" class='text_img' />
-        <image wx:else data-instrumentsn='{{item.instrument_SN}}' bindtap="bindCheckGPS" src="../../image/icon_binding.png" class='text_img' />
+        <image wx:if="{{item.position_SN}}" data-instrumentsn='{{item.instrument_SN}}' data-instrumentname='{{item.instrument_name}}' bindtap="UniteCheckGPS" src="../../image/icon_untie.png" class='text_img' />
+        <image wx:else data-instrumentsn='{{item.instrument_SN}}' data-instrumentname='{{item.instrument_name}}' bindtap="bindCheckGPS" src="../../image/icon_binding.png" class='text_img' />
       </view>
     </block>
 
