--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -163,9 +163,9 @@
                     <view class="new_p2_gray" style="font-size: 32rpx;color: #333333;">{{info.alterordertime}}</view>
                 </view>
 
-                <view class="new_p2" style="margin-top:30rpx;" wx:if="{{info.close_order_time}}">
+                <view class="new_p2" style="margin-top:30rpx;" wx:if="{{info.closeordertime}}">
                     <view class="new_p2_black" style="color: #999999;">关闭时间</view>
-                    <view class="new_p2_gray" style="font-size: 32rpx;color: #333333;">{{info.close_order_time}}</view>
+                    <view class="new_p2_gray" style="font-size: 32rpx;color: #333333;">{{info.closeordertime}}</view>
                 </view>
 
                 <view wx:if="{{status == 2}}" class="new_p2" style="margin-top:30rpx;">
