--- a/pages/gpsChooseCustomer/index.wxss
+++ b/pages/gpsChooseCustomer/index.wxss
@@ -62,6 +62,9 @@
   font-size: 32rpx;
   color: #333333;
   line-height: 44rpx;
+  flex-wrap: wrap;
+    overflow-wrap: anywhere;
+    word-break: break-all;
 }
 
 .text_img{
