--- a/pages/myOrder/myOrder.wxss
+++ b/pages/myOrder/myOrder.wxss
@@ -123,6 +123,9 @@ page{
   font-size: 28rpx;
   color: #333333;
   width: 75%;
+  flex-wrap: wrap;
+    overflow-wrap: anywhere;
+    word-break: break-all;
 }
 
 .new_line{
