--- a/pages/addCustomer/addCustomer.wxml
+++ b/pages/addCustomer/addCustomer.wxml
@@ -49,7 +49,11 @@
     
   </view>
 
-  <view style="margin-top:100rpx;">
+  <view style="margin-top:100rpx;" wx:if="{{isMCus == 2}}">
+    <button class='app_btn' bind:tap="editBut" style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
+  </view>
+
+  <view style="margin-top:100rpx;" wx:else>
     <button class='app_btn' bind:tap="submitBut" style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
   </view>
 
@@ -59,6 +63,10 @@
       <icon class="weui-icon-search_in-box" type="warn" size="14" bindtap="searchHandle"/>
       <view class="icon-box-desc">信息提交后不可修改，如需修改请联系管理员</view>
 </view>
+
+<!-- 弹框 -->
+  <dialog-cus showDialog='{{showDialog}}' datas="{{dialogData}}" bind:dialogCancel="dialogCancel" bind:dialogSure="dialogSure" />
+
 
 <!-- <form bindsubmit="submit">
   <view class="P5 app_flex">
