--- a/pages/addCustodian/addCustodian.wxml
+++ b/pages/addCustodian/addCustodian.wxml
@@ -35,7 +35,8 @@
   </view> -->
 
   <view style="margin-top:100rpx;">
-    <button class='app_btn' bind:tap="submitBut" style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
+    <button class='app_btn' wx:if="{{isMCus == 2}}" bind:tap="editBut" style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
+    <button class='app_btn' wx:else bind:tap="submitBut" style="width: 670rpx;height: 88rpx;background: {{submitState?'#999999':'#307FF5'}};border-radius: 12rpx;color:#FFFFFF;" form-type="submit" disabled="{{submitState}}">保存</button>
   </view>
 </form>
 
@@ -51,3 +52,8 @@
 <!-- 弹框 -->
   <dialog-cus showDialog='{{showDialog}}' datas="{{dialogData}}" bind:dialogCancel="dialogCancel" bind:dialogSure="dialogSure" />
 
+<!-- 弹框 -->
+  <dialog-cus showDialog='{{showEditDialog}}' datas="{{dialogEditData}}" bind:dialogCancel="dialogEditCancel" bind:dialogSure="dialogEditSure" />
+
+<!-- 弹框 -->
+  <dialog-cus showDialog='{{showDeleteDialog}}' datas="{{dialogDeleteData}}" bind:dialogCancel="dialogDeleteCancel" bind:dialogSure="dialogDeleteSure" />
